# hacknarok21

./: .gitignore  README.md  docker-compose.yaml
backend/: .coveragerc  .dockerignore  .env  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini
backend/api/: admin.py  consumers.py  models.py  routing.py
backend/api/migrations/: 0001_initial.py  0002_sessionlog.py  0003_auto_20210327_1939.py  0004_sessionlog_admin.py  0005_auto_20210327_1946.py  0006_auto_20210327_1946.py  0007_auto_20210327_2119.py  0008_log_session_id.py  0009_auto_20210328_0205.py
backend/settings/: asgi.py  settings.py  wsgi.py
eye_tracking/: .prettierrc.js  index.html  index.js
frontend/: .env.development  .env.production  .eslintrc.js  Dockerfile  README.md  chrome-extension-ts-starter@1.0.0  jest.config.js  package-lock.json  package.json  prd.Dockerfile  tailwind.config.js  vue.config.js
frontend/public/: app.yaml  index.html
frontend/src/: App.vue  main.ts  manifest.json
frontend/src/background/: Communicator.ts  EventTypes.ts  Messages.ts  WSMessageTypes.ts  background.ts
frontend/src/components/: one.vue  two.vue
frontend/src/content-scripts/: activity-detector.ts  activityPopup.ts
frontend/src/options/: App.vue  main.ts
frontend/src/popup/: App.vue  main.ts
frontend/src/router/: index.ts
frontend/src/standalone/: App.vue  main.ts
frontend/test-project/: package-lock.json  package.json
standalone-vue/: README.md  package-lock.json  package.json
standalone-vue/src/: App.vue  main.ts
swagger/: compose-env-file.env  default.conf
(+53 files in other folders)
