[tool.poetry]
name = "template"
version = "0.0.0"
description = ""
authors = ["Paweł 'Andrzej' Pankiewicz <pawel.pankiewicz@xdsa.pl>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
isort = "^5.6.4"
flake8 = "^3.8.4"
black = "^20.8b1"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
force_single_line = true
skip = ['.bzr', '.direnv', '.eggs', '.git', '.hg', '.mypy_cache', '.nox', '.pants.d', '.svn', '.tox', '.venv', '_build', 'buck-out', 'build', 'dist', 'node_modules', '.venv', "migrations"]
